# tech-C-task2

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
src/c/: main.c
src/c/task2/: func_prototype.h  input_data.c  input_data.h  one_thread.c  one_thread.h  test_func.c  test_func.h  thread_data.c  thread_data.h
src/c/task2/hard_init/: hard_init.c  hard_init.h
src/c/task2/lib/: main_struct.h  start_task.h
src/c/task2/lib/multi_thread/: start_task.c
src/c/task2/lib/one_thread/: start_task.c
src/c/task2/multi_thread/: thread_data.c  thread_data.h
src/c/task2/one_thread/: one_thread.c  one_thread.h
src/c/task2/test_func/: test_func.c
src/test/: stress_test.cpp  stress_test_dynamic.cpp  stress_test_static.cpp  test.cpp
